Updated '_drafts/03063.md' via CloudCannon

--- a/_drafts/03063.md
+++ b/_drafts/03063.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '03063'
+title: How Should You Prepare Your House for the Market?
 date:
 tags:
 excerpt:
@@ -12,6 +12,22 @@ use_youtube_image: true
 youtube_alternate_image:
 youtube_code:
 ---
-{% include youtube.html %}
+
+
+{% include youtube.html %}What do you need to do to get your house ready for sale? I believe that you should pay most of your attention to repairs, decluttering and depersonalizing, and cleaning your house from top to bottom.
+
+When it comes to repairs, a lot of people aren’t sure where to start. Should you remodel the bathroom? Put in hardwood floors? Add granite countertops? The answer {% include pullquote.html %} If it’s going to cost you more money to make those repairs than what you’re going to get back, then it’s not worth it.
+
+Instead, focus on repairs that you might have neglected over the years. Take a walk around the outside and inside of your house. If you have stained carpeting, replace it. If the walls are scratched, consider painting. Keep a list of everything you need to do and start early so that if you need any help, you have plenty of time to hire someone.
+
+It’s a really good idea to have a schedule for repairs. If you leave unlimited time to the work done, then you will probably take that time.
 
 {% include pullquote.html %}
+
+Next, you need to depersonalize and declutter your home. The goal is to make your house look like you don’t live there. Take down personal photos so that people can picture themselves and their family in your home.
+
+Take a look at your decor. Remember, the decor that’s appealing to you may not appeal to everyone, so consider packing some things up. Clear off your kitchen and bathroom counters and consider putting away your winter or summer clothes. Even a big closet can feel small if there are a lot of clothes in there. You have to pack anyway, so save yourself some time and put certain items away now.
+
+Finally, clean your house from top to bottom. This is the most important part of preparing your house for the market. Pay attention to the kitchen and the bathrooms, and make sure that your windows are crystal clear.
+
+Many people think they can handle cleaning on their own, but it can be well worth the money to hire a professional cleaning service. Hiring a professional also takes some of the stress out of those last-minute preparations.
