Updated '_posts/2017-09-12-week-of-90417.md' via CloudCannon

--- a/_posts/2017-09-12-week-of-90417.md
+++ b/_posts/2017-09-12-week-of-90417.md
@@ -6,4 +6,35 @@ excerpt:
 use_youtube_image: false
 ---
 
+<h3>Hunter Reynolds</h3> - <a href="http://hosted-p0.vresp.com/1913655/dd460644c8/ARCHIVE" target="_blank">What Are the Best Benefits of Homeownership?</a>
+Sent to: 28721  |  Opens: 33.52%  |   Clicks: 0.1%
 
+<h3>Charlotte Mabry</h3> - <a href="http://hosted-p0.vresp.com/995875/417384859f/ARCHIVE" target="_blank">How to Sell Your Home—Agent Secrets Revealed</a>
+Sent to: 12607  |  Opens: 20.93%  |   Clicks: 0.79%
+
+<h3>Clayton Gits</h3> - <a href="http://hosted-p0.vresp.com/1805141/29a93560ee/ARCHIVE" target="_blank">The Best Way to Choose a Realtor</a>
+Sent to: 15374  |  Opens: 17.47%  |   Clicks: 0.21%
+
+<h3>Robert Little</h3> - <a href="http://hosted-p0.vresp.com/1966079/831466a8d1/ARCHIVE" target="_blank">5 Ways to Add Value to Your Home</a>
+Sent to: 8218  |  Opens: 15.26%  |   Clicks: 1.08%
+
+<h3>Clifton Saunders</h3> - <a href="">8 Common Myths About Veteran Financing</a>
+Sent to: 11969  |  Opens: 13.4%  |   Clicks: 0.41%
+
+<hr>
+
+Mary Peacock<br>
+Paul Brouillette<br>
+Bill White<br>
+Will Cook<br>
+Bob & Diane Peterson<br>
+Andrew Ford<br>
+Paul Herrick<br>
+Matt Fetick<br>
+Nick Kellar <br>
+Sarita Dua<br>
+Don Vallee<br>
+Tom Nickley<br>
+Sean Zanganeh<br>
+Anastasia Riley<br>
+John Simmonds<br>
