--- a/9to5.md
+++ b/9to5.md
@@ -2,6 +2,8 @@
 layout: page
 title: Join Our Real Estate Team
 permalink: /9to5/
+tags:
+  - 9to5
 ---
 <div class="recruiting-photo">
    <span class="client-image-container">
