Updated '9to5.md' via CloudCannon

--- a/9to5.md
+++ b/9to5.md
@@ -44,9 +44,9 @@ And if you follow our plan for you, we guarantee you will take home at least $50
 
 Here’s the thing.  We need applicants right now.   If you get started right away, we’ll pay for your time in training.  Typically, we require our new applicants do a certain amount of phone prospecting before they start taking new prospects from the team. If you start now, we’ll offer to pay you an hourly wage during that portion of your training.  That’s right, you can earn $700 to $800 while you’re training!   That’s enough to pay for all of your real estate classes.  But to qualify for this, you’ve got to apply within the next 24 hours.  
 
-Here’s answers to questions many applicants have asked and the button to fill out the application is at the bottom of the page:  http://www.viewcentralpahouses.com/join-the-team
+<a href="http://www.viewcentralpahouses.com/join-the-team" target="_blank">Click here for answers to questions many applicants have asked and the button to fill out the application is at the bottom of the page</a>.
 
-If you’re thinking of closing this message, think about the next 30 years of your life.  An application doesn’t cost anything but it could mean the world to your future and could change your life.  All applications are completely free and confidential.  Click here for a free, no obligation direct application: http://www.viewcentralpahouses.com/join-the-team/join-the-dave-hooke-team-application
+If you’re thinking of closing this message, think about the next 30 years of your life.  An application doesn’t cost anything but it could mean the world to your future and could change your life.  All applications are completely free and confidential.  <a href="http://www.viewcentralpahouses.com/join-the-team/join-the-dave-hooke-team-application" target="_blank">Click here for a free, no obligation direct application</a>.
 
 Looking forward to talking with you soon!
 
