Updated '9to5.md' via CloudCannon

--- a/9to5.md
+++ b/9to5.md
@@ -18,7 +18,7 @@ Dear Frustrated Employee:
 
 I understand you may be currently employed at a traditional, corporate, or 9 to 5 job.  For some people, this can be painful.  All too often standard employment can eventually lead to disengagement for the following reasons:  1.) Job insecurity.  2.) Lack of purpose.  3.) Undercompensated.  
 
-<img src="/img/cheer-up.jpg" class="recruiting-photo">
+<img src="/img/cheer-up.jpg" class="float-left">
 In fact, according to an article in Forbes by Kristi Hedges, 48% of employees don’t like their jobs, and only 30% actually feel engaged by their careers.  Many frustrated or disengaged employees do their best to “just get through the day,” watching the clock and hoping time will pass faster. 
 
 I recently talked with a friend of mine who had been loyally working in his same position for over 18 years, only to find out that ‘upper level management’ was transitioning and there were going to be mass layoffs.  After 18 years he found himself unemployed and starting over.  Many people plod through this kind of thing their entire lives because they feel like they have to.
