Updated '9to5.md' via CloudCannon

--- a/9to5.md
+++ b/9to5.md
@@ -18,31 +18,26 @@ Dear Frustrated Employee:
 
 I understand you may be currently employed at a traditional, corporate, or 9 to 5 job.  For some people, this can be painful.  All too often standard employment can eventually lead to disengagement for the following reasons:  1.) Job insecurity.  2.) Lack of purpose.  3.) Undercompensated.  
 
-<img src="/img/cheer-up.jpg" class="float-left">
 In fact, according to an article in Forbes by Kristi Hedges, 48% of employees don’t like their jobs, and only 30% actually feel engaged by their careers.  Many frustrated or disengaged employees do their best to “just get through the day,” watching the clock and hoping time will pass faster. 
 
 I recently talked with a friend of mine who had been loyally working in his same position for over 18 years, only to find out that ‘upper level management’ was transitioning and there were going to be mass layoffs.  After 18 years he found himself unemployed and starting over.  Many people plod through this kind of thing their entire lives because they feel like they have to.
 
 My name is Dave Hooke and 15 years ago, I got into real estate right after college. Since then, myself and my real estate team have sold over 1,000 homes.  We have 8 people on our team and I can relate to the pain that you're going through, but I think I can help and here’s how: At our real estate team, our daily mission is to create RAVING fans of our clients, and our vision is to enrich the lives of the people we interact with by the way we practice life and business.  
 
-Our agents don’t feel job insecurity from their employer because they’re in charge!  Our agents are empowered with a sense of shared purpose based around our Compassion Program, which anonymously serves hurting people with random/urgent needs in our community. Lastly, our agents are happy with their compensation.  Our average real estate agent’s take home pay is over $70,000.00 with some team members earning 6 figures!  
+Our agents don’t feel job insecurity from their employer because they’re in charge!  Our agents are empowered with a sense of shared purpose based around our Compassion Program, which anonymously serves hurting people with random/urgent needs in our community. Lastly, our agents are happy with their compensation.  Our average real estate agent’s take home pay is over $70,000 with some team members earning 6 figures!  
 
-With our team you get:
-- 55 leads per month to get you to our minimum standard of $50,000 in take home pay 
-- Full access to the industry’s top technology and systems at zero cost.
-- Daily Training at 8:30 am & direct mentoring from one of the region's top industry producers in real estate
+With our team you get: 55 leads per month to get you to our minimum standard of $50,000 in take-home pay, full access to the industry’s top technology and systems at zero cost, daily training at 8:30 am and direct mentoring from one of the region's top industry producers in real estate.
 
-You can continue to cling to the illusion of job security and the safety of a ‘guaranteed’ paycheck, or you can take a step into a proven system where not 1 single agent has failed to take home a minimum of $50,000.00 a year and we’ve managed to serve over 80 families in need in our community as a team over the last 24 months.  
+You can continue to cling to the illusion of job security and the safety of a ‘guaranteed’ paycheck, or you can take a step into a proven system. Not 1 single agent on our team has failed to take home a minimum of $50,000 a year, and we’ve managed to serve over 80 families in need in our community as a team over the last 24 months.  
 
-Now, don’t take my word for this.  Let me tell you about one of our agents Drue Richmond.  Before real estate, Drue was working in internet marketing earning $29,000 per year.  She had a long commute, didn’t see it going anywhere, and decided to try real estate.  In her first 12 months, she earned $60,000.00, and after 4 years with us, she’ll earn $120,000.00.  Drue loves her position and finally feels the purpose and camaraderie of a team with a mission. 
+Now, don’t take my word for this.  Let me tell you about one of our agents, Drue Richmond.  Before real estate, Drue was working in internet marketing earning $29,000 per year.  She had a long commute, didn’t see it going anywhere, and decided to try real estate.  In her first 12 months, she earned $60,000, and after 4 years with us, she’ll earn $120,000.  Drue loves her position and finally feels the purpose and camaraderie of a team with a mission. 
 
 I want to offer you a position on our team.  
 
-On the day you get started with us, here’s exactly what’s going to happen.  You’re going to start our proven 30-day fast start training and we’ll get you up and running to sell a home in your first 120 days as a Realtor.  
+On the day you get started with us, here’s exactly what’s going to happen.  You’re going to start our proven 30-day fast start training and we’ll get you up and running to sell a home in your first 120 days as a Realtor.  And if you follow our plan for you, we guarantee you will take home at least $50,000 per year with potential to make 6 figures!
 
-And if you follow our plan for you, we guarantee you will take home at least $50,000.00 per year with potential to make 6 figures!
-
-Here’s the thing.  We need applicants right now.   If you get started right away, we’ll pay for your time in training.  Typically, we require our new applicants do a certain amount of phone prospecting before they start taking new prospects from the team. If you start now, we’ll offer to pay you an hourly wage during that portion of your training.  That’s right, you can earn $700 to $800 while you’re training!   That’s enough to pay for all of your real estate classes.  But to qualify for this, you’ve got to apply within the next 24 hours.  
+Here’s the thing.  We need applicants right now.   If you get started right away, we’ll pay for your time in training.  Typically, we require our new applicants do a certain amount of phone prospecting before they start taking new prospects from the team. If you start now, we’ll offer to pay you an hourly wage during that portion of your training.  That’s right, you can earn $700 to $800 while you’re training!   That’s enough to pay for all of your real estate classes, but to qualify for this, you’ve got to apply within the next 24 hours.  
+  
 
 <a href="http://www.viewcentralpahouses.com/join-the-team" target="_blank">Click here for answers to questions many applicants have asked and the button to fill out the application is at the bottom of the page</a>.
 
