adding youtube code

--- a/_posts/2017-09-12-week-of-90417.md
+++ b/_posts/2017-09-12-week-of-90417.md
@@ -3,7 +3,9 @@ layout: post
 title: Week of 9/04/17
 tags:
 excerpt:
-use_youtube_image: false
+use_youtube_image: true
+youtube_alternate_image:
+youtube_code: TqGCscMJgJ0
 ---
 
 
