working on post defaults

--- a/_posts/2017-09-12-week-of-90417.md
+++ b/_posts/2017-09-12-week-of-90417.md
@@ -11,28 +11,28 @@ youtube_code: TqGCscMJgJ0
 
 ### Hunter Reynolds
 
-* [What Are the Best Benefits of Homeownership?](http://hosted-p0.vresp.com/1913655/dd460644c8/ARCHIVE)
-* Sent to: 28721 | Opens: 33.52% | Clicks: 0.1%
+[What Are the Best Benefits of Homeownership?](http://hosted-p0.vresp.com/1913655/dd460644c8/ARCHIVE){: .top5}<br>
+Sent to: 28721 | Opens: 33.52% | Clicks: 0.1%
 
 ### Charlotte Mabry
 
-* [How to Sell Your Home—Agent Secrets Revealed](http://hosted-p0.vresp.com/995875/417384859f/ARCHIVE)
-* Sent to: 12607 | Opens: 20.93% | Clicks: 0.79%
+[How to Sell Your Home—Agent Secrets Revealed](http://hosted-p0.vresp.com/995875/417384859f/ARCHIVE){: .top5}<br>
+Sent to: 12607 | Opens: 20.93% | Clicks: 0.79%
 
 ### Clayton Gits
 
-* [The Best Way to Choose a Realtor](http://hosted-p0.vresp.com/1805141/29a93560ee/ARCHIVE)
-* Sent to: 15374 | Opens: 17.47% | Clicks: 0.21%
+[The Best Way to Choose a Realtor](http://hosted-p0.vresp.com/1805141/29a93560ee/ARCHIVE){: .top5}<br>
+Sent to: 15374 | Opens: 17.47% | Clicks: 0.21%
 
 ### Robert Little
 
-* [5 Ways to Add Value to Your Home](http://hosted-p0.vresp.com/1966079/831466a8d1/ARCHIVE)
-* Sent to: 8218 | Opens: 15.26% | Clicks: 1.08%
+[5 Ways to Add Value to Your Home](http://hosted-p0.vresp.com/1966079/831466a8d1/ARCHIVE){: .top5}<br>
+Sent to: 8218 | Opens: 15.26% | Clicks: 1.08%
 
 ### Clifton Saunders
 
-* [8 Common Myths About Veteran Financing](){: .cc-active}
-* Sent to: 11969 | Opens: 13.4% | Clicks: 0.41%
+[8 Common Myths About Veteran Financing](){: .top5}<br>
+Sent to: 11969 | Opens: 13.4% | Clicks: 0.41%
 
 ---
 
