fixing post layout

--- a/_posts/2017-09-12-week-of-90417.md
+++ b/_posts/2017-09-12-week-of-90417.md
@@ -2,7 +2,7 @@
 layout: post
 title: Week of 9/04/17
 tags:
-excerpt:
+excerpt: This week's Top Performing Emails were sent by Hunter Reynolds, Charlotte Mabry, Clayton Gits, Robert Little, and Clifton Saunders.
 use_youtube_image: true
 youtube_alternate_image:
 youtube_code: TqGCscMJgJ0
