Updated '_posts/2017-09-21-week-of-91117.md' via CloudCannon

--- a/_posts/2017-09-21-week-of-91117.md
+++ b/_posts/2017-09-21-week-of-91117.md
@@ -10,23 +10,23 @@ youtube_code: qo8uA9g2DYs
 ---
 
 
-### Tracy Wilson •&nbsp;[Costly Mistakes](http://hosted-p0.vresp.com/1964181/9534d9ca29/ARCHIVE)
+### Tracy Wilson -&nbsp;[Costly Mistakes](http://hosted-p0.vresp.com/1964181/9534d9ca29/ARCHIVE)
 
 | Sent to: 204 | Opens: 31.37 | Clicks: 8.33 |
 
-### Scott Hollinger •&nbsp;[Wildfire Season](http://p0.vresp.com/1PwtPI)
+### Scott Hollinger -&nbsp;[Wildfire Season](http://p0.vresp.com/1PwtPI)
 
 | Sent to 1,739 | Opens: 27.6 | Clicks: 3.85 |
 
-### Dan Ihara •&nbsp;[Do You Have Any Questions?](http://p0.vresp.com/TMerq7)
+### Dan Ihara -&nbsp;[Do You Have Any Questions?](http://p0.vresp.com/TMerq7)
 
 | 2190 | 26.12 | 2.28 |
 
-### Eric Vallee •&nbsp;[Questions Plain Text](http://p0.vresp.com/b3EWi1)
+### Eric Vallee -&nbsp;[Questions Plain Text](http://p0.vresp.com/b3EWi1)
 
 | 1,957 | 21.67 | 0.51 |
 
-### John Head •&nbsp;[Answering 2 Questions](http://p0.vresp.com/HBqRp6)
+### John Head -&nbsp;[Answering 2 Questions](http://p0.vresp.com/HBqRp6)
 
 | 1,049 | 19.35 | 4.29 |
 
