changing forms to buttons on recruiting landing pages

--- a/9to5.md
+++ b/9to5.md
@@ -9,7 +9,7 @@ tags:
    <span class="client-image-container">
     <img src="/img/headshot.png" alt="Dave Hooke" class="client-image"/>
   </span>
-<figcaption class="caption">Dave Hooke, Team Lead</figcaption> 
+<figcaption class="caption">Dave Hooke, Team Lead</figcaption>
 </div>
 
 <h3>Get Your Job Security Back</h3>
@@ -18,7 +18,7 @@ Dear Frustrated Employee:
 
 I understand you may be currently employed at a traditional, corporate, or 9 to 5 job.  For some people, this can be painful.  All too often standard employment can eventually lead to disengagement for the following reasons:  1.) Job insecurity.  2.) Lack of purpose.  3.) Undercompensated.  
 
-In fact, according to an article in Forbes by Kristi Hedges, 48% of employees don’t like their jobs, and only 30% actually feel engaged by their careers.  Many frustrated or disengaged employees do their best to “just get through the day,” watching the clock and hoping time will pass faster. 
+In fact, according to an article in Forbes by Kristi Hedges, 48% of employees don’t like their jobs, and only 30% actually feel engaged by their careers.  Many frustrated or disengaged employees do their best to “just get through the day,” watching the clock and hoping time will pass faster.
 
 I recently talked with a friend of mine who had been loyally working in his same position for over 18 years, only to find out that ‘upper level management’ was transitioning and there were going to be mass layoffs.  After 18 years he found himself unemployed and starting over.  Many people plod through this kind of thing their entire lives because they feel like they have to.
 
@@ -30,18 +30,16 @@ With our team you get: 55 leads per month to get you to our minimum standard of 
 
 You can continue to cling to the illusion of job security and the safety of a ‘guaranteed’ paycheck, or you can take a step into a proven system. Not 1 single agent on our team has failed to take home a minimum of $50,000 a year, and we’ve managed to serve over 80 families in need in our community as a team over the last 24 months.  
 
-Now, don’t take my word for this.  Let me tell you about one of our agents, Drue Richmond.  Before real estate, Drue was working in internet marketing earning $29,000 per year.  She had a long commute, didn’t see it going anywhere, and decided to try real estate.  In her first 12 months, she earned $60,000, and after 4 years with us, she’ll earn $120,000.  Drue loves her position and finally feels the purpose and camaraderie of a team with a mission. 
+Now, don’t take my word for this.  Let me tell you about one of our agents, Drue Richmond.  Before real estate, Drue was working in internet marketing earning $29,000 per year.  She had a long commute, didn’t see it going anywhere, and decided to try real estate.  In her first 12 months, she earned $60,000, and after 4 years with us, she’ll earn $120,000.  Drue loves her position and finally feels the purpose and camaraderie of a team with a mission.
 
 I want to offer you a position on our team.  
 
 On the day you get started with us, here’s exactly what’s going to happen.  You’re going to start our proven 30-day fast start training and we’ll get you up and running to sell a home in your first 120 days as a Realtor.  And if you follow our plan for you, we guarantee you will take home at least $50,000 per year with potential to make 6 figures!
 
 Here’s the thing.  We need applicants right now.   If you get started right away, we’ll pay for your time in training.  Typically, we require our new applicants do a certain amount of phone prospecting before they start taking new prospects from the team. If you start now, we’ll offer to pay you an hourly wage during that portion of your training.  That’s right, you can earn $700 to $800 while you’re training!   That’s enough to pay for all of your real estate classes, but to qualify for this, you’ve got to apply within the next 24 hours.  
-  
 
-<a href="http://www.viewcentralpahouses.com/join-the-team" target="_blank">Click here for answers to questions many applicants have asked and the button to fill out the application is at the bottom of the page</a>.
 
-If you’re thinking of closing this message, think about the next 30 years of your life.  An application doesn’t cost anything but it could mean the world to your future and could change your life.  All applications are completely free and confidential.  <a href="http://www.viewcentralpahouses.com/join-the-team/join-the-dave-hooke-team-application" target="_blank">Click here for a free, no obligation direct application</a>.
+If you’re thinking of closing this message, think about the next 30 years of your life.  An application doesn’t cost anything but it could mean the world to your future and could change your life.  All applications are completely free and confidential.
 
 Looking forward to talking with you soon!
 
@@ -50,7 +48,25 @@ Dave Hooke
 
 <h2 class="recruiting">Let's Make You More Money</h2>
 <h4 class="recruiting">Request a phone call - it does not cost a dime to talk.</h4>
-<form method="post" class="home-value cta-forms" action="http://formspree.io/Dave@hhande.com" onsubmit="return setReturn()">
+<hr>
+<h3>STEP 1</h3>
+CLICK BELOW TO COMPLETE AND SUBMIT YOUR APPLICATION & RESUME.<br>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScE1mQKkiMt_zAG7kI92-SRnCyUBDsDoJ9cWwGAP0m5mIY4iQ/viewform" target="_blank"><img src="/img/resume.png" class="apply"></a>
+
+
+<h3>STEP 2</h3>
+CLICK BELOW TO TAKE A PERSONALITY PROFILE TEST. ONCE COMPLETED, EMAIL THE FOLLOWING 2 THINGS WITH THE SUBJECT LINE "MY DISC PROFILE" TO <a href="mailto:JENNAKAH@THINKHHE.COM">JENNAKAH@THINKHHE.COM:</a>
+<ul><li>1) DISC Profile Results</li>
+<li>2) Values Profile Results</li></ul>
+
+Note: The personality profile test is NOT a measure of IQ & it is NOT timed, so take your time. These are not pass/fail tests. Just be honest and choose the best answer that fits who you are in general. Typically the first answer you think of is likely the best one. The two profiles (DISC & Values) combined will take approximately 15 minutes to finish and should be completed in one sitting. Please complete the profiles at a time of limited interruptions & distractions.
+<br>
+<a href="https://www.tonyrobbins.com/disc/" target="_blank"><img src="/img/personality.png" class="apply"></a>
+
+
+
+<!--FORM, they're using the one on their site for now-->
+<!-- <form method="post" class="home-value cta-forms" action="http://formspree.io/Dave@hhande.com" onsubmit="return setReturn()">
     <fieldset>
         <p id="thanks"></p>
 <label for="firstname">First Name*</label>
@@ -62,7 +78,7 @@ Dave Hooke
 <label for="phone">Phone Number
 </label>
 <input type="tel" name="phone">
-<!--11-->
+
 <label for="city">City
 </label>
 <input type="text" name="city">
@@ -75,14 +91,14 @@ Dave Hooke
 <label for="message">Why are you interested in this?
 </label>
 <textarea name="employer"></textarea>
-<!-- submit! -->
+
 <input class="submit light-light" type="submit" value="Apply Now" name="submitrecruitingForm">
 <span class="asterisk">*</span>required
 </fieldset>
-<!-- Cloud cannon settings field -->
+
 <div class="hidden">
-<input type="hidden" name="_to" value="{{site.data.settings.client.email}}">
-<input type="hidden" name="_subject" value="Recruiting Contact Request Message From Your {{site.data.settings.title}}">
+<input type="hidden" name="_to" value="Dave@hhande.com">
+<input type="hidden" name="_subject" value="Recruiting Contact Request Message From Your Recruiting Blog">
 <input type="text" name="_gotcha">
 </div>
-</form>
+</form> -->
