changing forms to buttons on recruiting landing pages

--- a/9to5.md
+++ b/9to5.md
@@ -30,7 +30,7 @@ With our team you get: 55 leads per month to get you to our minimum standard of 
 
 You can continue to cling to the illusion of job security and the safety of a ‘guaranteed’ paycheck, or you can take a step into a proven system. Not 1 single agent on our team has failed to take home a minimum of $50,000 a year, and we’ve managed to serve over 80 families in need in our community as a team over the last 24 months.  
 
-Now, don’t take my word for this.  Let me tell you about one of our agents, Drue Richmond.  Before real estate, Drue was working in internet marketing earning $29,000 per year.  She had a long commute, didn’t see it going anywhere, and decided to try real estate.  In her first 12 months, she earned $60,000, and after 4 years with us, she’ll earn $120,000.  Drue loves her position and finally feels the purpose and camaraderie of a team with a mission.
+Now, don’t take my word for this.  Let me tell you about one of our agents, Drue Richmond.  Before real estate, Drue was working in internet marketing earning $29,000 per year.  She had a long commute, didn’t see it going anywhere, and decided to try real estate.  In her first 12 months, she earned $60,000, and after 4 years with us, her income is well above that.  Drue loves her position and finally feels the purpose and camaraderie of a team with a mission.
 
 I want to offer you a position on our team.  
 
