Updated '_posts/2017-09-21-week-of-91117.md' via CloudCannon

--- a/_posts/2017-09-21-week-of-91117.md
+++ b/_posts/2017-09-21-week-of-91117.md
@@ -20,15 +20,15 @@ youtube_code: qo8uA9g2DYs
 
 ### Dan Ihara -&nbsp;[Do You Have Any Questions?](http://p0.vresp.com/TMerq7)
 
-| 2190 | 26.12 | 2.28 |
+| Sent to 2,190 | Opens: 26.12 | Clicks: 2.28 |
 
 ### Eric Vallee -&nbsp;[Questions Plain Text](http://p0.vresp.com/b3EWi1)
 
-| 1,957 | 21.67 | 0.51 |
+| Sent to: 1,957 | Opens: 21.67 | Clicks: 0.51 |
 
 ### John Head -&nbsp;[Answering 2 Questions](http://p0.vresp.com/HBqRp6)
 
-| 1,049 | 19.35 | 4.29 |
+| Sent to: 1,049 | Opens: 19.35 | Clicks: 4.29 |
 
 John Simmonds - How to Maintain Your Pool During the Hurricane
 
