Updated '_posts/2017-09-25-week-of-91817.md' via CloudCannon

--- a/_posts/2017-09-25-week-of-91817.md
+++ b/_posts/2017-09-25-week-of-91817.md
@@ -10,11 +10,11 @@ youtube_code: 1o0CKKvrWns
 ---
 
 
-### Chad Huebener -&nbsp;[New inspection contingency changes](http://p0.vresp.com/tfChRr)
+### Chad Huebener - [New inspection contingency changes](http://p0.vresp.com/tfChRr)
 
-3232 &nbsp;| &nbsp;21.5 &nbsp;| &nbsp;3.47
+| 3232       | 21.5       | 3.47 |
 
-### Hal Sweasey -&nbsp;
+### Hal Sweasey -
 
 ### John Simmonds
 
@@ -44,7 +44,7 @@ Dave Nimick - Local Lender vs Online Mortgage Provider
 
 Jay White - Is your home priced correctly for the market?
 
-Rob Ellish&nbsp;
+Rob Ellish
 
 Gloria Buck - Red Relief—Helping Those Impacted by Harvey and Irma
 
