Updated '_posts/2017-09-25-week-of-91817.md' via CloudCannon

--- a/_posts/2017-09-25-week-of-91817.md
+++ b/_posts/2017-09-25-week-of-91817.md
@@ -14,13 +14,23 @@ youtube_code: 1o0CKKvrWns
 
 | Sent to: 3232 &nbsp; | &nbsp;Opens: 21.5 &nbsp; | &nbsp;Clicks: 3.47 |
 
-### Hal Sweasey -&nbsp;
+### Hal Sweasey - [Meet the Team](http://p0.vresp.com/cTY7bb)
 
-### John Simmonds
+Sent to: 5478 | Opens: 18.18 | Clicks: 4.03
 
-### Charleston Homes
+### John Simmonds -&nbsp;[How to Maintain Your Pool During the Hurricane](http://p0.vresp.com/9CsE1r)
 
-### Greg McDaniel
+Sent to: 1282 | Opens: 17.47 | Clicks: 4.6
+
+### Charleston Homes -&nbsp;[Fall home preparation alert](http://p0.vresp.com/xmmKlT)
+
+Sent to: 4897 | Opens: 16.01 | Clicks: 2.31
+
+### Greg McDaniel -&nbsp;[Commission Deal](http://p0.vresp.com/36aoaX)
+
+Sent to: 4,843 | Opens: 15.49 | Clicks: 1.2
+
+&lt;hr&gt;
 
 Bo Winn - Watch to find out the latest market trends
 
