Updated '_posts/2017-09-25-week-of-91817.md' via CloudCannon

--- a/_posts/2017-09-25-week-of-91817.md
+++ b/_posts/2017-09-25-week-of-91817.md
@@ -30,7 +30,7 @@ Sent to: 4897 | Opens: 16.01 | Clicks: 2.31
 
 Sent to: 4,843 | Opens: 15.49 | Clicks: 1.2
 
-&lt;hr&gt;
+&nbsp;
 
 Bo Winn - Watch to find out the latest market trends
 
