Updated '_posts/2017-09-25-week-of-91817.md' via CloudCannon

--- a/_posts/2017-09-25-week-of-91817.md
+++ b/_posts/2017-09-25-week-of-91817.md
@@ -30,8 +30,6 @@ Sent to: 4897 | Opens: 16.01 | Clicks: 2.31
 
 Sent to: 4,843 | Opens: 15.49 | Clicks: 1.2
 
-&nbsp;
-
 Bo Winn - Watch to find out the latest market trends
 
 Mike Lafido - 2 record-breaking home sales
@@ -54,7 +52,7 @@ Dave Nimick - Local Lender vs Online Mortgage Provider
 
 Jay White - Is your home priced correctly for the market?
 
-Rob Ellish&nbsp;
+Rob Ellis - Investing in Columbus
 
 Gloria Buck - Red Relief—Helping Those Impacted by Harvey and Irma
 
@@ -96,7 +94,7 @@ Paul Herrick - Real Estate Myth Busting: Part 2
 
 John Hatch - Important stats from the Portland market
 
-Peter MacIntyre
+Peter MacIntyre - 5 Ways to Invest In Real Estate
 
 Curtis Johnson - 3 facts you need to know about the home-flipping craze
 
